hphp/test/slow/global_func/meth_caller/meth_caller.php.expectf
int(1)
int(6)
int(8)
int(9)
int(10)

Fatal error: Uncaught exception 'HH\InvariantException' with message 'object must be an instance of (D), instead it is (B)' in %s/meth_caller.php:32
Stack trace:
#0 (): HH\invariant_violation()
#1 %s/meth_caller.php(32): __SystemLib\MethCallerHelper->__invoke()
#2 (): entrypoint_meth_caller()
#3 {main}
